tests/paczka1/small_fuzzy/44038078.err
Error in line 7: 5EEv A691 281,52
Error in line 5: 5EEv A691 66,0
Error in line 4: ga030JXRE A540 59,2
